added structured testing with QUnit

--- a/lib/python/lightningjs/http/templates/index.html
+++ b/lib/python/lightningjs/http/templates/index.html
@@ -12,6 +12,9 @@
         <h1>LightningJS</h1>
         <ul>
             <li>
+                <a href="/test">Run the tests</a>
+            </li>
+            <li>
                 <a href="/benchmark">Run the benchmarks</a>
             </li>
         </ul>
