explained benchmark timing

--- a/lib/python/lightningjs/http/templates/benchmark.html
+++ b/lib/python/lightningjs/http/templates/benchmark.html
@@ -6,6 +6,12 @@
             * {
                 font-family: monospace;
             }
+            h2 {
+                font-size: 1em;
+                font-weight: normal;
+                text-align: center;
+                color: red;
+            }
             iframe {
                 overflow: hidden;
                 width: 100%;
@@ -41,5 +47,6 @@
         </script>
     </head>
     <body>
+        <h2>benchmarks are designed to slow down document.ready by ~1s, window.onload ~2s, and final library by ~5s</h2>
     </body>
 </html>
